--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@tanstack/react-query": "^5.85.5",
     "@types/node": "^24.3.0",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "i18next": "^25.4.2",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
     "react-i18next": "^15.7.3",
     "react-router-dom": "^7.8.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "yup": "^1.7.0"
   },
   "devDependencies": {
