--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@hookform/resolvers": "^5.2.1",
+    "@react-pdf/renderer": "^4.3.1",
     "@tanstack/react-query": "^5.85.5",
     "@types/node": "^24.3.0",
     "axios": "^1.11.0",
@@ -20,6 +21,7 @@
     "framer-motion": "^12.23.12",
     "i18next": "^25.4.2",
     "jspdf": "^3.0.3",
+    "jspdf-invoice-template": "^1.4.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
